using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace Assets.Scripts
{
    internal class AnimationStrings
    {
        internal static string isMoving = "isMoving";
        internal static string IsAttack = "isAttack";
        internal static string AttackCoolDown = "attackCooldown";
        internal static string MoveX = "MoveX";
        internal static string MoveY = "MoveY";
        internal static string hasTarget = "hasTarget";
        internal static string isAlive = "isAlive";
        internal static string CanMove;
        internal static string CrossbowAttack = "crossAttack";
        internal static string GunAttack = "gunAttack";
    }
}
